==> Broadcom/AFBR-S50-API/Sources/Platform/Renesas_RA4M2/driver/s2pi.c <==
#include "driver/s2pi.h"
#include "driver/irq.h"
#include "bsp_api.h"
#include "hal_data.h"
#include "io.h"
#include "debug.h"
#include "board/board_config.h"
#define SPIx_SCK_PIN                     BSP_IO_PORT_01_PIN_11
#define SPIx_MISO_PIN                    BSP_IO_PORT_01_PIN_10
#define SPIx_MOSI_PIN                    BSP_IO_PORT_01_PIN_09
#define SPIx_CS_PIN                      BSP_IO_PORT_01_PIN_12
#define SPIx_IRQ_PIN                     BSP_IO_PORT_01_PIN_04
#define S2PI_GPIO_DELAY_US 10
#define S2PI_GPIO_DELAY() ((void)0)
#include "utility/time.h"
#define S2PI_GPIO_DELAY() Time_DelayUSec(S2PI_GPIO_DELAY_US)

status_t S2PI_Init(s2pi_slave_t defaultSlave, uint32_t baudRate_Bps)
{
    (void)(defaultSlave);
    (void)(baudRate_Bps);

    static bool isInitialized = false;

    if (isInitialized) return STATUS_OK;

    spiHnd_.Status = STATUS_IDLE;
    spiHnd_.BaudRate = 0;
    spiHnd_.Callback = 0;
    spiHnd_.CallbackParam = 0;
    spiHnd_.Slave = SPI_DEFAULT_SLAVE;

    /* Configure CS pin */
    R_IOPORT_PinWrite(&g_ioport_ctrl, (bsp_io_port_pin_t) SPIx_CS_PIN, BSP_IO_LEVEL_HIGH);

    /* Configure the IRQ pin */
    R_ICU_ExternalIrqOpen(&g_external_irq0_ctrl, &g_external_irq0_cfg);
    R_ICU_ExternalIrqEnable(&g_external_irq0_ctrl);

    /* Calculate register set values for the requested baudrate */
    rspck_div_setting_t spiSettings;
    fsp_err_t ret = R_SPI_CalculateBitrate(baudRate_Bps, &spiSettings);
    bool invalidSettings = (spiSettings.brdv == 0) && (spiSettings.spbr == 0);
    if ((ret != FSP_SUCCESS) || invalidSettings) return ERROR_FAIL;

    /* Set the requested baudrate */
    spi_extended_cfg_t * pExtCfg = (spi_extended_cfg_t*)pSpiDrvConfig->p_extend;
    pExtCfg->spck_div = spiSettings;

    /* Open the S2PI peripheral */
    if (FSP_SUCCESS != R_SPI_Open(pSpiDrvHandle, pSpiDrvConfig))
        return ERROR_FAIL;

    isInitialized = true;
    spiHnd_.BaudRate = baudRate_Bps;

    return STATUS_OK;
}

status_t S2PI_TransferFrame(s2pi_slave_t spi_slave,
                            uint8_t const * txData,
                            uint8_t * rxData,
                            size_t frameSize,
                            s2pi_callback_t callback,
                            void * callbackData)
{
    (void)(spi_slave);

    /* Verify arguments. */
    if (!txData || frameSize == 0 || frameSize >= 0x10000) return ERROR_INVALID_ARGUMENT;

    /* Check the driver status and set spi slave.*/
    IRQ_LOCK();
    if (spiHnd_.Status != STATUS_IDLE)
    {
        IRQ_UNLOCK();
        return spiHnd_.Status;
    }
    spiHnd_.Status = STATUS_BUSY;
    IRQ_UNLOCK();

    spiHnd_.Callback = callback;
    spiHnd_.CallbackParam = callbackData;

    R_IOPORT_PinWrite(&g_ioport_ctrl, (bsp_io_port_pin_t) SPIx_CS_PIN, BSP_IO_LEVEL_LOW);

    IRQ_LOCK();

    /* Master send data to Slave */
    fsp_err_t err = rxData ? R_SPI_WriteRead(pSpiDrvHandle, txData, rxData, frameSize, SPI_BIT_WIDTH_8_BITS)
                                             : R_SPI_Write(pSpiDrvHandle, txData, frameSize, SPI_BIT_WIDTH_8_BITS);

    IRQ_UNLOCK();

    if (err != FSP_SUCCESS)
        return ERROR_FAIL;
    else
        return STATUS_OK;
}

status_t S2PI_CaptureGpioControl(s2pi_slave_t slave)
{
    (void)slave;

    /* Check if something is ongoing. */
    IRQ_LOCK();
    if (spiHnd_.Status != STATUS_IDLE)
    {
        IRQ_UNLOCK();
        return spiHnd_.Status;
    }
    spiHnd_.Status = STATUS_S2PI_GPIO_MODE;
    IRQ_UNLOCK();

    R_IOPORT_PinWrite(&g_ioport_ctrl, s2pi_gpios_[S2PI_CLK], BSP_IO_LEVEL_HIGH);

    R_IOPORT_PinsCfg(&g_ioport_ctrl, &g_bsp_pin_cfg2);

    return STATUS_OK;
}

status_t S2PI_ReleaseGpioControl(s2pi_slave_t slave)
{
    (void)slave;

    /* Check if something is ongoing. */
    IRQ_LOCK();
    if (spiHnd_.Status != STATUS_S2PI_GPIO_MODE)
    {
        IRQ_UNLOCK();
        return spiHnd_.Status;
    }
    spiHnd_.Status = STATUS_IDLE;
    IRQ_UNLOCK();

    R_IOPORT_PinsCfg(&g_ioport_ctrl, &g_bsp_pin_cfg3);

    return STATUS_OK;
}

status_t S2PI_WriteGpioPin(s2pi_slave_t slave, s2pi_pin_t pin, uint32_t value)
{
    (void)(slave);

    if (pin > S2PI_IRQ) return ERROR_INVALID_ARGUMENT;

    /* Check if in GPIO mode. */
    if (spiHnd_.Status != STATUS_S2PI_GPIO_MODE)
        return ERROR_S2PI_INVALID_STATE;

    R_IOPORT_PinWrite(&g_ioport_ctrl, s2pi_gpios_[pin], value);

    S2PI_GPIO_DELAY();

    return STATUS_OK;
}

status_t S2PI_ReadGpioPin(s2pi_slave_t slave, s2pi_pin_t pin, uint32_t * value)
{
    (void)(slave);

    if (pin > S2PI_IRQ) return ERROR_INVALID_ARGUMENT;

    /* Check if in GPIO mode. */
    if (spiHnd_.Status != STATUS_S2PI_GPIO_MODE)
        return ERROR_S2PI_INVALID_STATE;

    *value = R_BSP_PinRead(s2pi_gpios_[pin]);

    S2PI_GPIO_DELAY();

    return STATUS_OK;
}

status_t S2PI_SetIrqCallback(s2pi_slave_t slave,
                             s2pi_irq_callback_t callback,
                             void * callbackData)
{
    (void)(slave);
    spiHnd_.IrqCallback = callback;
    spiHnd_.IrqCallbackParam = callbackData;

    return STATUS_OK;
}

uint32_t S2PI_ReadIrqPin(s2pi_slave_t slave)
{
    (void)(slave);
    return (R_ICU->IELSR_b[g_external_irq0_ctrl.irq].IR) ? 0u : 1u;
}

status_t S2PI_CycleCsPin(s2pi_slave_t slave)
{
    /* Check the driver status. */
    IRQ_LOCK();
    if (spiHnd_.Status != STATUS_IDLE)
    {
        IRQ_UNLOCK();
        return STATUS_BUSY;
    }
    spiHnd_.Status = STATUS_BUSY;
    IRQ_UNLOCK();

    R_IOPORT_PinWrite(&g_ioport_ctrl, s2pi_map[slave].CS, BSP_IO_LEVEL_LOW);
    R_IOPORT_PinWrite(&g_ioport_ctrl, s2pi_map[slave].CS, BSP_IO_LEVEL_HIGH);

    spiHnd_.Status = STATUS_IDLE;

    return STATUS_OK;
}

status_t S2PI_Abort(s2pi_slave_t slave)
{
    (void)slave;

    IRQ_LOCK();

    /* Check if something is ongoing. */
    if (spiHnd_.Status == STATUS_BUSY)
    {
        /* Abort SPI transfer. */
        R_SPI_Close(pSpiDrvHandle);
        R_SPI_Open(pSpiDrvHandle, pSpiDrvConfig);
    }

    IRQ_UNLOCK();

    status_t status = S2PI_CompleteTransfer(ERROR_ABORTED);
    if (status == ERROR_ABORTED) status = STATUS_OK;

    return status;
}

static status_t S2PI_CompleteTransfer(status_t status)
{
    spiHnd_.Status = STATUS_IDLE;

    /* Deactivate CS (set high), as we use GPIO pin */
    /* Note: hardcoded default SPI slave because there is no 'source' param in the callback */
    R_IOPORT_PinWrite(&g_ioport_ctrl, s2pi_map[SPI_DEFAULT_SLAVE].CS, BSP_IO_LEVEL_HIGH);

    /* Invoke callback if there is one */
    if (spiHnd_.Callback != 0)
    {
        s2pi_callback_t callback = spiHnd_.Callback;
        spiHnd_.Callback = 0;
        status = callback(status, spiHnd_.CallbackParam);
    }

    /* If the callback ran, then this is the updated status. Otherwise, the received status is
     * returned (no processing was done) */
    return status;
}

status_t S2PI_SetBaudRate(s2pi_slave_t slave, uint32_t baudRate_Bps)
{
    (void)slave;

    rspck_div_setting_t spiSettings;
    fsp_err_t ret = R_SPI_CalculateBitrate(baudRate_Bps, &spiSettings);

    bool invalidSettings = (spiSettings.brdv == 0) && (spiSettings.spbr == 0);
    if ((ret != FSP_SUCCESS) || invalidSettings) return ERROR_S2PI_INVALID_BAUDRATE;

    ret = R_SPI_Close(pSpiDrvHandle);
    spi_extended_cfg_t * pExtCfg = (spi_extended_cfg_t*)pSpiDrvConfig->p_extend;
    pExtCfg->spck_div = spiSettings;
    ret += R_SPI_Open(pSpiDrvHandle, pSpiDrvConfig);

    if (ret != FSP_SUCCESS)
        return ERROR_FAIL;
    else
    {
        spiHnd_.BaudRate = baudRate_Bps;
        return STATUS_OK;
    }
}
