==> Broadcom/AFBR-S50-API/Sources/Platform/NXP_MKLxxZ/driver/s2pi.c <==
#include "s2pi.h"
#include "board/board_config.h"
#include "driver/dma.h"
#include "driver/gpio.h"
#include "driver/irq.h"
#include "driver/fsl_clock.h"
#define S2PI_SET_BUSY(hnd) do          \
{                                      \
    IRQ_LOCK();                        \
    if(hnd->Status != STATUS_IDLE)     \
    {                                  \
        IRQ_UNLOCK();                  \
        return hnd->Status;            \
    }                                  \
    hnd->Status = STATUS_BUSY;         \
    IRQ_UNLOCK();                      \
} while (0)
#define S2PI_SET_GPIO(hnd) do              \
{                                          \
    IRQ_LOCK();                            \
    if(hnd->Status != STATUS_IDLE)         \
    {                                      \
        IRQ_UNLOCK();                      \
        return hnd->Status;                \
    }                                      \
    hnd->Status = STATUS_S2PI_GPIO_MODE;   \
    IRQ_UNLOCK();                          \
} while (0)
#define S2PI_SET_IDLE(hnd) do      \
{                                  \
    hnd->Status = STATUS_IDLE;     \
} while (0)
#define S2PI_LOGGING 0
#define S2PI_PIN_MUX_DISABLED 0
#define S2PI_GPIO_DELAY_US 10
#define S2PI_GPIO_DELAY() ((void)0)
#include "utility/time.h"
#define S2PI_GPIO_DELAY() Time_DelayUSec(S2PI_GPIO_DELAY_US)
#define S2PI_AssertSoftwareCS(slave) ((void)0)
#define S2PI_ClearSoftwareCS(slave) ((void)0)
#include "debug.h"

status_t S2PI_Init(s2pi_slave_t defaultSlave,
                   uint32_t baudRate_Bps)
{
    assert(!isInitialized);

    GPIO_Init();
    DMA_Init();

    /* Register callback for DMA interrupt */
    DMA_SetTransferDoneCallback(DMA_CHANNEL_SPI_TX, S2PI_TxDmaCallbackFunction, &myS2PIHnd);
    DMA_SetTransferDoneCallback(DMA_CHANNEL_SPI_RX, S2PI_RxDmaCallbackFunction, &myS2PIHnd);

    memset(&myS2PIHnd, 0, sizeof(myS2PIHnd));

#if defined(CPU_MKL17Z256VFM4)
    (void)defaultSlave;
    assert(defaultSlave == SPI_DEFAULT_SLAVE);

    myS2PIHnd.Instance[0].SPI = SPI1;
    S2PI_InitPins(myS2PIHnd.Instance[0].SPI);
    S2PI_InitSpi(&myS2PIHnd.Instance[0], baudRate_Bps);
    S2PI_SetInstance(&myS2PIHnd.Instance[0]);
#else
    myS2PIHnd.Instance[0].SPI = SPI1;
    myS2PIHnd.Instance[1].SPI = SPI0;

    s2pi_instance_t * instance = S2PI_GetHandleFromSlave(defaultSlave);
    if (instance == NULL) instance = S2PI_GetHandleFromSlave(SPI_DEFAULT_SLAVE);
    assert(instance != NULL);
    S2PI_InitPins(instance->SPI);
    S2PI_InitSpi(&myS2PIHnd.Instance[0], baudRate_Bps);
    S2PI_InitSpi(&myS2PIHnd.Instance[1], baudRate_Bps);

    S2PI_SetSlaveInternal(&myS2PIHnd, defaultSlave);
#endif

#ifdef DEBUG
    isInitialized = true;
#endif

    return STATUS_OK;
}

status_t S2PI_TransferFrame(s2pi_slave_t slave,
                            uint8_t const * txData,
                            uint8_t * rxData,
                            size_t frameSize,
                            s2pi_callback_t callback,
                            void * callbackData)
{
    assert(isInitialized);

    /* Verify arguments. */
    if (!txData || !frameSize) return ERROR_INVALID_ARGUMENT;

    s2pi_hnd_t * hnd = &myS2PIHnd;

    /* Check the driver status and set spi slave.*/
    S2PI_SET_BUSY(hnd);

    s2pi_log_setup(slave, txData, rxData, frameSize);

#if defined(CPU_MKL17Z256VFM4)
    (void)slave;
    assert(slave == SPI_DEFAULT_SLAVE);
#else
    if (hnd->Slave != slave)
    {
        status_t status = S2PI_SetSlaveInternal(hnd, slave);
        if (status < STATUS_OK)
        {
            S2PI_SET_IDLE(hnd);
            return status;
        }
    }
#endif

    hnd->Callback = callback;
    hnd->CallbackParam = callbackData;

    /* Set up the RX DMA channel */
    if (rxData)
    {
        /* Set up this channel's control which includes enabling the DMA interrupt */
        DMA0->DMA[DMA_CHANNEL_SPI_RX].DAR = (uint32_t) rxData;      // set dest. address

        /* Set source address increment. */
        DMA0->DMA[DMA_CHANNEL_SPI_RX].DCR |= DMA_DCR_DINC_MASK;
    }
    else
    {
        /* Enable Rx DMA in order to get an reliable IRQ when all transfers are done.
         * Reason: Tx DMA IRQ occurs, when last transfers is still in progress. */

        /* Set up this channel's control which includes enabling the DMA interrupt */
        DMA0->DMA[DMA_CHANNEL_SPI_RX].DAR = (uint32_t) (&hnd->RxSink);     // set pseudo dest. address

        /* Unset source address increment. */
        DMA0->DMA[DMA_CHANNEL_SPI_RX].DCR &= ~DMA_DCR_DINC_MASK;
    }

    S2PI_AssertSoftwareCS(slave);

    /* Set up the TX channel's control which includes enabling the DMA interrupt */
    DMA0->DMA[DMA_CHANNEL_SPI_TX].SAR = (uint32_t) txData;

    /* Set up the RX channel's control which includes enabling the DMA interrupt */
    DMA0->DMA[DMA_CHANNEL_SPI_RX].DSR_BCR = DMA_DSR_BCR_BCR(frameSize);

    /* Enable the RX channel's DMA peripheral request */
    DMA0->DMA[DMA_CHANNEL_SPI_RX].DCR |= DMA_DCR_ERQ_MASK;

    /* Set up the TX channel's control which includes enabling the DMA interrupt */
    DMA0->DMA[DMA_CHANNEL_SPI_TX].DSR_BCR = DMA_DSR_BCR_BCR(frameSize);

    /* Enable the TX channel's DMA peripheral request */
    DMA0->DMA[DMA_CHANNEL_SPI_TX].DCR |= DMA_DCR_ERQ_MASK;

    return STATUS_OK;
}

status_t S2PI_Abort(s2pi_slave_t slave)
{
    (void)slave;
    assert(isInitialized);
    s2pi_hnd_t * hnd = &myS2PIHnd;

    /* Check if something is ongoing. */
    IRQ_LOCK();
    if (hnd->Status == STATUS_IDLE)
    {
        IRQ_UNLOCK();
        return STATUS_OK;
    }

    /* Abort SPI transfer. */
    if (hnd->Status == STATUS_BUSY)
    {
        /* Disable the DMA peripheral request */
        DMA_StopChannel(DMA_CHANNEL_SPI_RX);
        DMA_StopChannel(DMA_CHANNEL_SPI_TX);
        DMA_ClearStatus(DMA_CHANNEL_SPI_RX);
        DMA_ClearStatus(DMA_CHANNEL_SPI_TX);
    }

    IRQ_UNLOCK();

    status_t status = S2PI_CompleteTransfer(hnd, ERROR_ABORTED);
    if(status == ERROR_ABORTED) status = STATUS_OK;

    return status;
}

status_t S2PI_CycleCsPin(s2pi_slave_t slave)
{
    assert(isInitialized);
    s2pi_hnd_t * hnd = &myS2PIHnd;

    /* Check the driver status. */
    S2PI_SET_BUSY(hnd);

#if defined(CPU_MKL17Z256VFM4)
    (void)slave;
    assert(slave == SPI_DEFAULT_SLAVE);
    GPIO_SetPinMux(Pin_S2PI_CS1, S2PI_CS1_MUX_GPIO);
    GPIO_ClearPinOutput(Pin_S2PI_CS1);
    GPIO_SetPinOutput(Pin_S2PI_CS1);
    GPIO_SetPinMux(Pin_S2PI_CS1, S2PI_CS1_MUX_SPI);
#else

    switch(slave)
    {
        case S2PI_SLAVE1:
        {
            GPIO_SetPinMux(Pin_S2PI_CS1, S2PI_CS1_MUX_GPIO);
            GPIO_ClearPinOutput(Pin_S2PI_CS1);
            GPIO_SetPinOutput(Pin_S2PI_CS1);
            GPIO_SetPinMux(Pin_S2PI_CS1, S2PI_CS1_MUX_SPI);
        } break;

        case S2PI_SLAVE2:
        {
            GPIO_SetPinMux(Pin_S2PI_CS2, S2PI_CS2_MUX_GPIO);
            GPIO_ClearPinOutput(Pin_S2PI_CS2);
            GPIO_SetPinOutput(Pin_S2PI_CS2);
        } break;

        case S2PI_SLAVE3:
        {
            GPIO_SetPinMux(Pin_S2PI_CS3, S2PI_CS3_MUX_GPIO);
            GPIO_ClearPinOutput(Pin_S2PI_CS3);
            GPIO_SetPinOutput(Pin_S2PI_CS3);
        } break;

        case S2PI_SLAVE4:
        {
            GPIO_SetPinMux(Pin_S2PI_CS4, S2PI_CS4_MUX_GPIO);
            GPIO_ClearPinOutput(Pin_S2PI_CS4);
            GPIO_SetPinOutput(Pin_S2PI_CS4);
        } break;

        case S2PI_SLAVE5:
        {
            GPIO_SetPinMux(Pin_S2PI_CS5, S2PI_CS5_MUX_GPIO);
            GPIO_ClearPinOutput(Pin_S2PI_CS5);
            GPIO_SetPinOutput(Pin_S2PI_CS5);
            GPIO_SetPinMux(Pin_S2PI_CS5, S2PI_CS5_MUX_SPI);
        } break;

        case S2PI_SLAVE6:
        {
            GPIO_SetPinMux(Pin_S2PI_CS6, S2PI_CS6_MUX_GPIO);
            GPIO_ClearPinOutput(Pin_S2PI_CS6);
            GPIO_SetPinOutput(Pin_S2PI_CS6);
            GPIO_SetPinMux(Pin_S2PI_CS6, S2PI_CS6_MUX_SPI);
        } break;

        default:
        {
            S2PI_SET_IDLE(hnd);
            return ERROR_INVALID_ARGUMENT;
        }
    }
#endif

    S2PI_SET_IDLE(hnd);
    return STATUS_OK;
}

status_t S2PI_SetIrqCallback(s2pi_slave_t slave,
                             s2pi_irq_callback_t callback,
                             void * callbackData)
{
    assert(isInitialized);

#if defined(CPU_MKL17Z256VFM4)
    (void)slave;
    assert(slave == SPI_DEFAULT_SLAVE);
    GPIO_SetISR(Pin_S2PI_IRQ1, callback, callbackData);
#else
    switch(slave)
    {
        case S2PI_SLAVE1:
            GPIO_SetISR(Pin_S2PI_IRQ1, callback, callbackData);
            break;

        case S2PI_SLAVE2:
            GPIO_SetISR(Pin_S2PI_IRQ2, callback, callbackData);
            break;

        case S2PI_SLAVE3:
            GPIO_SetISR(Pin_S2PI_IRQ3, callback, callbackData);
            break;

        case S2PI_SLAVE4:
            GPIO_SetISR(Pin_S2PI_IRQ4, callback, callbackData);
            break;

        case S2PI_SLAVE5:
            GPIO_SetISR(Pin_S2PI_IRQ5, callback, callbackData);
            break;

        case S2PI_SLAVE6:
            GPIO_SetISR(Pin_S2PI_IRQ6, callback, callbackData);
            break;

        default:
            return ERROR_S2PI_INVALID_SLAVE;
    }
#endif
    return STATUS_OK;
}

uint32_t S2PI_ReadIrqPin(s2pi_slave_t slave)
{
    assert(isInitialized);

#if defined(CPU_MKL17Z256VFM4)
    (void)slave;
    assert(slave == SPI_DEFAULT_SLAVE);
    return !GPIO_GetInterruptStatus(Pin_S2PI_IRQ1);
#else
    switch (slave)
    {
        case S2PI_SLAVE1:
            return !GPIO_GetInterruptStatus(Pin_S2PI_IRQ1);

        case S2PI_SLAVE2:
            return !GPIO_GetInterruptStatus(Pin_S2PI_IRQ2);

        case S2PI_SLAVE3:
            return !GPIO_GetInterruptStatus(Pin_S2PI_IRQ3);

        case S2PI_SLAVE4:
            return !GPIO_GetInterruptStatus(Pin_S2PI_IRQ4);

        case S2PI_SLAVE5:
            return !GPIO_GetInterruptStatus(Pin_S2PI_IRQ5);

        case S2PI_SLAVE6:
            return !GPIO_GetInterruptStatus(Pin_S2PI_IRQ6);

        default:
            return 1U; // IQR pin is pull up
    }
#endif
}

status_t S2PI_CaptureGpioControl(s2pi_slave_t slave)
{
    assert(isInitialized);
    s2pi_hnd_t * hnd = &myS2PIHnd;

    /* Check if something is ongoing. */
    S2PI_SET_GPIO(hnd);

#if defined(CPU_MKL17Z256VFM4)
    (void)slave;
    assert(slave == SPI_DEFAULT_SLAVE);

    /* Enable SPI1 Pins as GPIO. */
    GPIO_SetPinOutput(Pin_SPI1_MOSI);
    GPIO_SetPinMux(Pin_SPI1_MOSI, SPI1_MOSI_MUX_GPIO);
    GPIO_SetPinPullUp(Pin_SPI1_MISO);
    GPIO_SetPinMux(Pin_SPI1_MISO, SPI1_MISO_MUX_GPIO);
    GPIO_SetPinOutput(Pin_SPI1_CLK);
    GPIO_SetPinMux(Pin_SPI1_CLK, SPI1_CLK_MUX_GPIO);
    GPIO_SetPinOutput(Pin_S2PI_CS1);
    GPIO_SetPinMux(Pin_S2PI_CS1, S2PI_CS1_MUX_GPIO);
#else
    s2pi_instance_t * instance = S2PI_GetHandleFromSlave(slave);

    /* Output Pins */
    if (instance->SPI == SPI0)
    {
        /* Disable SPI1 Pins. */
        GPIO_SetPinMux(Pin_SPI1_MOSI, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_SPI1_MISO, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_SPI1_CLK, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_S2PI_CS1, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_S2PI_CS2, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_S2PI_CS3, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_S2PI_CS4, S2PI_PIN_MUX_DISABLED);

        /* Enable SPI0 Pins as GPIO. */
        GPIO_SetPinOutput(Pin_SPI0_MOSI);
        GPIO_SetPinMux(Pin_SPI0_MOSI, SPI0_MOSI_MUX_GPIO);
        GPIO_SetPinPullUp(Pin_SPI0_MISO);
        GPIO_SetPinMux(Pin_SPI0_MISO, SPI0_MISO_MUX_GPIO);
        GPIO_SetPinOutput(Pin_SPI0_CLK);
        GPIO_SetPinMux(Pin_SPI0_CLK, SPI0_CLK_MUX_GPIO);
        GPIO_SetPinOutput(Pin_S2PI_CS5);
        GPIO_SetPinMux(Pin_S2PI_CS5, S2PI_CS5_MUX_GPIO);
        GPIO_SetPinOutput(Pin_S2PI_CS6);
        GPIO_SetPinMux(Pin_S2PI_CS6, S2PI_CS6_MUX_GPIO);
    }
    else
    {
        /* Disable SPI0 Pins. */
        GPIO_SetPinMux(Pin_SPI0_MOSI, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_SPI0_MISO, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_SPI0_CLK, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_S2PI_CS5, S2PI_PIN_MUX_DISABLED);
        GPIO_SetPinMux(Pin_S2PI_CS6, S2PI_PIN_MUX_DISABLED);

        /* Enable SPI1 Pins as GPIO. */
        GPIO_SetPinOutput(Pin_SPI1_MOSI);
        GPIO_SetPinMux(Pin_SPI1_MOSI, SPI1_MOSI_MUX_GPIO);
        GPIO_SetPinPullUp(Pin_SPI1_MISO);
        GPIO_SetPinMux(Pin_SPI1_MISO, SPI1_MISO_MUX_GPIO);
        GPIO_SetPinOutput(Pin_SPI1_CLK);
        GPIO_SetPinMux(Pin_SPI1_CLK, SPI1_CLK_MUX_GPIO);
        GPIO_SetPinOutput(Pin_S2PI_CS1);
        GPIO_SetPinMux(Pin_S2PI_CS1, S2PI_CS1_MUX_GPIO);
        GPIO_SetPinOutput(Pin_S2PI_CS2);
        GPIO_SetPinMux(Pin_S2PI_CS2, S2PI_CS2_MUX_GPIO);
        GPIO_SetPinOutput(Pin_S2PI_CS3);
        GPIO_SetPinMux(Pin_S2PI_CS3, S2PI_CS3_MUX_GPIO);
        GPIO_SetPinOutput(Pin_S2PI_CS4);
        GPIO_SetPinMux(Pin_S2PI_CS4, S2PI_CS4_MUX_GPIO);
    }
#endif
    return STATUS_OK;
}

status_t S2PI_ReleaseGpioControl(s2pi_slave_t slave)
{
    assert(isInitialized);
    s2pi_hnd_t * hnd = &myS2PIHnd;

    /* Check if in GPIO mode. */
    IRQ_LOCK();
    if(hnd->Status != STATUS_S2PI_GPIO_MODE)
    {
        IRQ_UNLOCK();
        return hnd->Status;
    }
    IRQ_UNLOCK();

#if defined(CPU_MKL17Z256VFM4)
    (void)slave;
    assert(slave == SPI_DEFAULT_SLAVE);
    S2PI_ResetPins(NULL);
    status_t status = STATUS_OK;
#else
    status_t status = S2PI_SetSlaveInternal(hnd, slave);
#endif

    S2PI_SET_IDLE(hnd);
    return status;
}

status_t S2PI_WriteGpioPin(s2pi_slave_t slave, s2pi_pin_t pin, uint32_t value)
{
    assert(isInitialized);
    assert(pin == S2PI_CS || pin == S2PI_CLK || pin == S2PI_MOSI);

    if (!(pin == S2PI_CS || pin == S2PI_CLK || pin == S2PI_MOSI))
        return ERROR_INVALID_ARGUMENT;

    s2pi_hnd_t * hnd = &myS2PIHnd;

    /* Check if in GPIO mode. */
    IRQ_LOCK();
    if (hnd->Status != STATUS_S2PI_GPIO_MODE)
    {
        IRQ_UNLOCK();
        return ERROR_S2PI_INVALID_STATE;
    }
    IRQ_UNLOCK();

    gpio_pin_t gpio_pin = S2PI_GetGpioPin(slave, pin);
    GPIO_WritePinOutput(gpio_pin, value);

    /* Decrease SW Protocol Speed by adding a delay. */
    S2PI_GPIO_DELAY();

    return STATUS_OK;
}

status_t S2PI_ReadGpioPin(s2pi_slave_t slave, s2pi_pin_t pin, uint32_t * value)
{
    assert(isInitialized);
    assert(pin == S2PI_MISO || pin == S2PI_IRQ);

    if(!(pin == S2PI_MISO || pin == S2PI_IRQ))
        return ERROR_INVALID_ARGUMENT;

    s2pi_hnd_t * hnd = &myS2PIHnd;

    /* Check if in GPIO mode. */
    IRQ_LOCK();
    if (hnd->Status != STATUS_S2PI_GPIO_MODE)
    {
        IRQ_UNLOCK();
        return ERROR_S2PI_INVALID_STATE;
    }
    IRQ_UNLOCK();

    gpio_pin_t gpio_pin = S2PI_GetGpioPin(slave, pin);
    *value = GPIO_ReadPinInput(gpio_pin);

    return STATUS_OK;
}

status_t S2PI_SetBaudRate(s2pi_slave_t slave, uint32_t baudRate_Bps)
{
    assert(isInitialized);
    s2pi_instance_t * instance = S2PI_GetHandleFromSlave(slave);

    /* Baud Rate Register can be written at any time, no need to block the SPI handle */
    return S2PI_SetBaudRateIntern(instance, baudRate_Bps);
}

static inline status_t S2PI_CompleteTransfer(s2pi_hnd_t * hnd, status_t status)
{
    S2PI_ClearSoftwareCS(hnd->Slave);

    s2pi_log_send();

    S2PI_SET_IDLE(hnd);

    /* Invoke callback if there is one */
    if (hnd->Callback != 0)
    {
        s2pi_callback_t callback = hnd->Callback;
        hnd->Callback = 0;
        status = callback(status, hnd->CallbackParam);
        assert(status == STATUS_OK || status == ERROR_ABORTED);
    }

    return status;
}
